--- a/oxd-kong/views/layout.ejs
+++ b/oxd-kong/views/layout.ejs
@@ -141,6 +141,7 @@
     <script src="js/app/apis/controllers/api-details-controller.js?r=0.8.8"></script>
     <script src="js/app/apis/controllers/api-health-checks-controller.js?r=0.8.8"></script>
     <script src="js/app/apis/controllers/apis-controller.js?r=0.8.8"></script>
+    <script src="js/app/apis/controllers/manage-uma-rs-plugin-controller.js?r=0.8.8"></script>
     <script src="js/app/apis/views/api-hc-model.js?r=0.8.8"></script>
     <script src="js/app/app.js?r=0.8.8"></script>
     <script src="js/app/certificates/00_certificates.js?r=0.8.8"></script>
