--- a/oxd-kong/assets/js/app/apis/views/api-details.html
+++ b/oxd-kong/assets/js/app/apis/views/api-details.html
@@ -1,9 +1,9 @@
-<div class="bg-light-grey padding margin-bottom">
-    <h4 class="clearfix">
-        <i class="mdi mdi-information-outline"></i>
-        API details
-    </h4>
-</div>
+<!--<div class="bg-light-grey padding margin-bottom">-->
+    <!--<h4 class="clearfix">-->
+        <!--<i class="mdi mdi-information-outline"></i>-->
+        <!--API details-->
+    <!--</h4>-->
+<!--</div>-->
 
 <form class="form-horizontal">
     <div ng-if="Gateway" data-ng-include="partial"></div>
