--- a/oxd-kong/assets/js/app/core/layout/partials/footer.html
+++ b/oxd-kong/assets/js/app/core/layout/partials/footer.html
@@ -4,20 +4,20 @@
             <ul class="nav navbar-nav navbar-left no-margin">
                 <li>
                     <a>
-                        <strong class="text-success">oxd-kong {{konga_version}}</strong>
+                        <strong class="text-success">oxd-kong </strong>
                     </a>
                 </li>
-                <li class="hidden-xs">
-                    <a href="https://github.com/pantsel/konga" target="_blank">
-                        <i class="fa fa-github"></i>GitHub
-                    </a>
-                </li>
+                <!--<li class="hidden-xs"> konga_version-->
+                    <!--<a href="https://github.com/pantsel/konga" target="_blank">-->
+                        <!--<i class="fa fa-github"></i>GitHub-->
+                    <!--</a>-->
+                <!--</li>-->
 
-                <li class="hidden-xs">
-                    <a href="https://github.com/pantsel/konga/issues" target="_blank">
-                        <i class="mdi mdi-18px mdi-bug"></i>Issues
-                    </a>
-                </li>
+                <!--<li class="hidden-xs">-->
+                    <!--<a href="https://github.com/pantsel/konga/issues" target="_blank">-->
+                        <!--<i class="mdi mdi-18px mdi-bug"></i>Issues-->
+                    <!--</a>-->
+                <!--</li>-->
 
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-xs" style="margin-right: 5px">
