--- a/oxd-kong/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/oxd-kong/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -26,6 +26,10 @@
                   <th>Hosts</th>
                   <td>{{api.hosts.join(',')}}</td>
                 </tr>
+                <tr>
+                  <th>Proxy Listen</th>
+                  <td>{{info.configuration.proxy_listen}}</td>
+                </tr>
                 </tbody>
               </table>
               <br/>
@@ -77,7 +81,8 @@
                 </div>
                 <div class="col-md-11">
                   <div class="form-group has-feedback col-md-4">
-                    <input type="text" class="form-control" value="{{api.upstream_url}}" disabled/>
+                    <input type="text" class="form-control" value="{{api.upstream_url}}" title="Upstream URL" disabled/>
+                    <span class="help-block error-block basic-block" title="Kong proxy point">{{info.configuration.proxy_listen}}</span>
                   </div>
                   <div class="form-group has-feedback col-md-8"
                        ng-class="{'has-error': PluginForm.path.$invalid && (PluginForm.path.$dirty || PluginForm.$submitted)}">
@@ -102,7 +107,7 @@
                                              min-length="0"
                                              debounce-delay="0"></auto-complete>
                             </tags-input>
-                            <span class="help-block error-block basic-block">This field is required!</span>
+                            <span class="help-block error-block basic-block"></span>
                           </div>
                         </div>
                         <div class="col-md-2" data-ng-if="plugins.length <= 0">
@@ -115,8 +120,9 @@
                       <div class="row">
                         <input type="hidden" value="1" name="hdScopeCount{{$parent.$index}}{{$index}}"/>
                         <div class="col-md-12">
-                          <input type="radio" value="or" name="condition{{$parent.$index}}{{$index}}1">or | <input
-                          type="radio" value="and" name="condition{{$parent.$index}}{{$index}}1">and
+                          <input type="radio" value="or" name="condition{{$parent.$index}}{{$index}}1">or |
+                          <input type="radio" value="and" name="condition{{$parent.$index}}{{$index}}1">and |
+                          <input type="radio" value="not" name="condition{{$parent.$index}}{{$index}}1">not
                           <button type="button" class="btn btn-xs btn-success" data-add="rule"
                                   data-ng-click="addGroup($parent.$index +''+ $index,1)"><i class="mdi mdi-plus"></i>
                             Add Group
