Changes title in layout

--- a/gluu-gateway/assets/js/app/core/layout/partials/sidenav.html
+++ b/gluu-gateway/assets/js/app/core/layout/partials/sidenav.html
@@ -3,7 +3,7 @@
     <header class="side-nav__header">
       <a class="brand" data-ui-sref-active="active" data-ui-sref="dashboard">
         <!--<img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive"/>-->
-        <h4 style="color: #ffffff;">OXD-KONG</h4>
+        <h4 style="color: #ffffff;font-size:17px;">GLUU-GATEWAY</h4>
         <!--<span class="version">v{{konga_version}}</span>-->
         <!--<img ng-src="images/konga-logo-small.png" class="konga-nav-icon visible-xs visible-sm"/>-->
       </a>
