--- a/konga/assets/js/app/core/layout/partials/sidenav.html
+++ b/konga/assets/js/app/core/layout/partials/sidenav.html
@@ -2,7 +2,7 @@
   <nav class="js-side-nav-container side-nav__container">
     <header class="side-nav__header">
       <a class="brand" data-ui-sref-active="active" data-ui-sref="dashboard">
-        <img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive"/>
+        <img ng-src="images/gluu-gateway.png" class="img-responsive"/>
         <!--<span class="version">v{{konga_version}}</span>-->
         <!--<img ng-src="images/konga-logo-small.png" class="konga-nav-icon visible-xs visible-sm"/>-->
       </a>
