Used gluu icon as favicon #5

--- a/konga/views/layout.ejs
+++ b/konga/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="konga">
   <head>
-    <title>Konga</title>
+    <title>Gluu Gateway</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
