--- a/konga/assets/js/app/core/layout/partials/header.html
+++ b/konga/assets/js/app/core/layout/partials/header.html
@@ -55,7 +55,7 @@
           <a class="nav-auth-img-container" uib-dropdown-toggle>
             <img class="nav-auth-img" ng-src="images/user-profile.png"/>
             &nbsp;
-            <span class="greeting visible-md-inline visible-lg-inline">Hello {{!!user().email ? ', ' + user().email : ''}}</span>
+            <span class="greeting visible-md-inline visible-lg-inline"></span>
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu animated fadeInDownShort go" uib-dropdown-menu role="menu"
